--- a/src/Components/Body/styles.module.css
+++ b/src/Components/Body/styles.module.css
@@ -1,40 +1,6 @@
-.tic_tac_toe {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-}
-
 .row {
   display: flex;
 }
-
-/* .tile {
-  width: 200px;
-  height: 150px;
-  border: 4px solid #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  font-size: 24px;
-}
-
-.tile.top {
-  border-top: none;
-}
-
-.tile.left {
-  border-left: none;
-}
-
-.tile.right {
-  border-right: none;
-}
-
-.tile.bottom {
-  border-bottom: none;
-} */
 
 .container {
   display: flex;
@@ -44,6 +10,31 @@
 
 .parent {
   display: flex;
-  /* align-items: center; */
   justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .row {
+    max-width: 70%;
+  }
+
+  #col {
+    height: 110px;
+  }
+  .container {
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .row {
+    max-width: 45%;
+  }
+
+  #col {
+    height: 80px;
+  }
+  .container {
+    margin-top: 10px;
+  }
 }
