--- a/src/Components/NavBar/styles.module.css
+++ b/src/Components/NavBar/styles.module.css
@@ -1,8 +1,6 @@
 .container {
-  height: 250px;
+  height: 170px;
   width: 100%;
-  /* background-color: black; */
-  /* border: solid; */
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -12,9 +10,28 @@
 .contents {
   display: flex;
   justify-content: space-between;
-  /* margin-top: 50px; */
-  width: 80%;
+  width: 70%;
   height: 50px;
-  /* border: solid; */
-  /* margin-left: 20px; */
+}
+
+span {
+  font-size: 14px;
+}
+
+@media only screen and (max-width: 768px) {
+  .contents {
+    justify-content: flex-end;
+    align-items: flex-end;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    display: flex;
+    justify-content: space-evenly;
+  }
+  .contents {
+    justify-content: center;
+    align-items: flex-start;
+  }
 }
