--- a/src/Components/Select/styles.module.css
+++ b/src/Components/Select/styles.module.css
@@ -8,5 +8,14 @@
   height: 40px;
 }
 
-/* background-color: rgb(1, 127, 254);
-  border: solid 1px rgb(1, 127, 254); */
+@media only screen and (max-width: 768px) {
+  .container {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .container {
+    display: none;
+  }
+}
