--- a/src/styles.module.css
+++ b/src/styles.module.css
@@ -8,13 +8,23 @@
 body {
   background-color: var(--background-color);
   color: var(--text-color);
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
 }
 
 .container {
   background-color: var(--background-color);
   color: var(--text-color);
-  height: 100vh;
-  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  /* max-width: 1500px; */
+  margin: 0 auto;
+  overflow-x: hidden;
+  padding: 0 15px;
+  box-sizing: border-box;
 }
 
 .tile {
@@ -53,4 +63,8 @@ body {
 .light_mode {
   --background-color: #ffffff;
   --text-color: #000000;
+}
+
+.title {
+  margin-top: 50px !important;
 }
