--- a/src/Components/NavBar/styles.module.css
+++ b/src/Components/NavBar/styles.module.css
@@ -20,7 +20,7 @@ span {
 
 @media only screen and (max-width: 768px) {
   .contents {
-    justify-content: flex-end;
+    justify-content: flex-end !important;
     align-items: flex-end;
   }
 }
@@ -31,10 +31,10 @@ span {
     justify-content: space-evenly;
   }
   .contents {
-    justify-content: center;
+    justify-content: center !important;
     align-items: center;
-    /* border: solid 1px; */
-    /* width: 60%; */
     height: 70px;
+    border: solid 1px;
+    flex-direction: row !important;
   }
 }
