--- a/src/Components/NavBar/styles.module.css
+++ b/src/Components/NavBar/styles.module.css
@@ -33,7 +33,8 @@ span {
   .contents {
     justify-content: center !important;
     align-items: center;
-    height: 70px;
+    min-height: 100px;
+    width: 200px;
     border: solid 1px;
     flex-direction: row !important;
   }
