--- a/src/Components/NavBar/styles.module.css
+++ b/src/Components/NavBar/styles.module.css
@@ -20,7 +20,7 @@ span {
 
 @media only screen and (max-width: 768px) {
   .contents {
-    justify-content: flex-end !important;
+    justify-content: flex-end;
     align-items: flex-end;
   }
 }
@@ -31,11 +31,7 @@ span {
     justify-content: space-evenly;
   }
   .contents {
-    justify-content: center !important;
+    justify-content: center;
     align-items: center;
-    min-height: 100px;
-    width: 200px;
-    border: solid 1px;
-    flex-direction: row !important;
   }
 }
