--- a/src/Components/Modes/styles.module.css
+++ b/src/Components/Modes/styles.module.css
@@ -3,7 +3,6 @@
 }
 
 .mode {
-  /* margin-right: 20px; */
   font-size: 20px !important;
 }
 
@@ -37,5 +36,8 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: row;
+  }
+  .mode {
+    color: black !important;
   }
 }
